--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto"
+      rel="stylesheet">
 <head>
   <meta charset="utf-8">
   <title>MyMaterialApp</title>
